# CHOMP

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  collect_test_data.sh  pin_packing.graphql
.devcontainer/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  devcontainer.json  docker-compose.yaml  localstack-setup.sh  router.yaml
.github/: dependabot.yml
.github/workflows/: backend-code.yml  charts.yml  code.yml  container.yml  devcontainer.yml  docs.yml  frontend-code.yml  policy.yml  schema.yml
auth/: Cargo.toml
auth/src/: authentication.rs  authorization.rs  lib.rs  middleware.rs
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  router.yaml  supergraph-config.yaml
backend/.devcontainer/: devcontainer.json
backend/chimp_chomp/: Cargo.toml
backend/chimp_chomp/src/: image_loading.rs  jobs.rs  main.rs  postprocessing.rs  well_centering.rs
backend/chimp_controller/: Cargo.toml  README.md  build.rs
backend/chimp_controller/src/: chimp_messages.rs  existing_images.rs  main.rs  new_image.rs  new_prediction.rs  schemas.rs
backend/chimp_controller/src/queries/: create_prediction.rs  image_created.rs  image_predictions.rs  mod.rs
backend/chimp_protocol/: Cargo.toml  README.md
backend/chimp_protocol/src/: lib.rs
backend/clap_for_s3/src/: lib.rs
backend/compound_library/: Cargo.toml  README.md
backend/compound_library/src/: main.rs  migrator.rs
backend/compound_library/src/entities/: compound_instances.rs  compound_types.rs  mod.rs
backend/compound_library/src/graphql/: compound_instances_res.rs  compound_types_res.rs  mod.rs  schema.rs
backend/compound_library/src/tables/: compound_instances.rs  compound_types.rs  mod.rs
backend/compound_soaking/: Cargo.toml  README.md
backend/compound_soaking/src/: main.rs  migrator.rs
backend/compound_soaking/src/entities/: mod.rs  soak_compound.rs
backend/compound_soaking/src/graphql/: mod.rs  soak_compound_res.rs  subgraph_extensions.rs
backend/compound_soaking/src/tables/: mod.rs  soak_compound.rs
backend/crystal_library/: Cargo.toml  README.md
backend/crystal_library/src/: graphql.rs  main.rs  migrator.rs
backend/crystal_library/src/entities/: crystal_plates.rs  crystal_wells.rs  mod.rs
backend/crystal_library/src/graphql/: crystal_plates_res.rs  crystal_wells_res.rs  mod.rs
backend/crystal_library/src/resolvers/: crystal_wells_res.rs  mod.rs
backend/crystal_library/src/tables/: crystal_wells.rs  mod.rs
backend/graphql_endpoints/: Cargo.toml
backend/graphql_endpoints/src/: lib.rs
backend/graphql_event_broker/: Cargo.toml
backend/graphql_event_broker/src/: lib.rs
backend/graphql_types/src/: lib.rs
backend/opa_client/: Cargo.toml
backend/opa_client/src/: graphql.rs  lib.rs
backend/pin_packing/: Cargo.toml
backend/pin_packing/src/: graphql.rs  main.rs  migrations.rs
backend/pin_packing/src/resolvers/: cane_library.rs  cane_mount.rs  crystal.rs  mod.rs  pin_library.rs  pin_mount.rs  puck_library.rs  puck_mount.rs
backend/pin_packing/src/tables/: cane_library.rs  cane_mount.rs  crystal.rs  pin_library.rs  puck_mount.rs
backend/soakdb_io/: Cargo.toml  collect_test_data.sh
backend/soakdb_io/src/: lib.rs  models.rs
backend/soakdb_io/src/datatypes/: combination.rs  datetime.rs  fallible.rs  status.rs  text.rs
backend/soakdb_io/src/tables/: main_table.rs  mod.rs  pucks.rs  soak_db.rs
backend/soakdb_sync/: README.md
backend/soakdb_sync/src/resolvers/: export.rs
backend/src/: graphql.rs  main.rs  models.rs
backend/src/api/: export.rs  import.rs  mod.rs
backend/src/resolvers/: export.rs  import.rs
backend/targeting/: Cargo.toml
backend/targeting/src/: lib.rs  main.rs  migrations.rs
backend/targeting/src/resolvers/: image.rs  mod.rs  prediction.rs
backend/targeting/src/tables/: image.rs  mod.rs  prediction.rs
backend/the_paginator/: Cargo.toml  README.md
backend/the_paginator/src/: graphql.rs  lib.rs
charts/xchemlab/: Chart.yaml  values.yaml
chimp_chomp/: Cargo.toml  README.md  build.rs  chimp.onnx
chimp_chomp/src/: image_loading.rs  inference.rs  jobs.rs  main.rs  model.rs  postprocessing.rs  well_centering.rs
chimp_protocol/: Cargo.toml
chimp_protocol/src/: lib.rs
clap_for_s3/: Cargo.toml
clap_for_s3/src/: lib.rs
exporter/: Cargo.toml
exporter/src/: main.rs  models.rs
exporter/src/api/: export.rs  import.rs  mod.rs
frontend/: .gitignore  codegen.ts  package.json  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/config/: paths.js
frontend/public/: index.html
frontend/scripts/: build.js  lint.js
graphql_endpoints/: Cargo.toml  README.md
graphql_event_broker/: README.md
graphql_types/: Cargo.toml  README.md
opa_client/: Cargo.toml  README.md
opa_client/src/: graphql.rs  lib.rs
pin_packing/: Cargo.toml  README.md
pin_packing/src/: graphql.rs  main.rs  migrations.rs
pin_packing/src/resolvers/: cane.rs  cane_library.rs  cane_mount.rs  crystal.rs  mod.rs  pin.rs  pin_library.rs  pin_mount.rs  puck.rs  puck_library.rs  puck_mount.rs
pin_packing/src/tables/: cane.rs  cane_library.rs  cane_mount.rs  crystal.rs  mod.rs  pin.rs  pin_library.rs  pin_mount.rs  puck.rs  puck_library.rs  puck_mount.rs
policies/: compound_library.rego  compound_soaking.rego  crystal_library.rego  pin_packing.rego  policy.rego  soakdb_sync.rego  targeting.rego  xchemlab.rego
soakdb/: Cargo.toml
soakdb/src/: lib.rs  models.rs
soakdb/src/datatypes/: combination.rs  datetime.rs  duration.rs  ispyb_export.rs  mod.rs  mounting_result.rs  status.rs  text.rs  visit.rs
soakdb/src/tables/: main_table.rs  pucks.rs  soak_db.rs
soakdb_io/: Cargo.toml  README.md
soakdb_sync/: Cargo.toml
soakdb_sync/src/: graphql.rs  main.rs  models.rs
soakdb_sync/src/resolvers/: export.rs  import.rs
src/: lib.rs
targeting/: Cargo.toml  README.md
targeting/src/: graphql.rs  main.rs  migrations.rs
targeting/src/resolvers/: image.rs  prediction.rs  well.rs
targeting/src/tables/: image.rs  mod.rs  prediction_crystal.rs  prediction_drop.rs  well.rs
(+58 files in other folders)
