[workspace]
members = [
    "chimp_chomp",
    "chimp_protocol",
    "graphql_endpoints",
    "graphql_event_broker",
    "opa_client",
    "pin_packing",
    "soakdb_io",
    "soakdb_sync",
]

[workspace.dependencies]
async-graphql = { version = "5.0.10", default-features = false, features = [
    "chrono",
    "graphiql",
    "tracing",
    "uuid",
] }
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
chrono = { version = "0.4.26", default-features = false }
clap = { version = "4.4.1", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenvy = { version = "0.15.7" }
itertools = { version = "0.10.5" }
sea-orm = { version = "0.11.2", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "0.11.3" }
thiserror = { version = "1.0.47" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.0" }
uuid = { version = "1.4.1", features = ["v4"] }
