[workspace]
members = [
    "chimp_chomp",
    "chimp_protocol",
    "graphql_endpoints",
    "graphql_event_broker",
    "graphql_types",
    "opa_client",
    "pin_packing",
    "clap_for_s3",
    "soakdb_io",
    "soakdb_sync",
    "targeting",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75" }
async-graphql = { version = "5.0.10", default-features = false, features = [
    "chrono",
    "graphiql",
    "tracing",
    "uuid",
    "url",
] }
aws-credential-types = { version = "0.56.0" }
aws-sdk-s3 = { version = "0.29.0" }
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
chrono = { version = "0.4.28", default-features = false }
clap = { version = "4.4.7", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenvy = { version = "0.15.7" }
itertools = { version = "0.11.0" }
reqwest = { version = "0.11.22" }
sea-orm = { version = "0.11.2", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "0.11.3" }
thiserror = { version = "1.0.50" }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.1" }
uuid = { version = "1.5.0", features = ["v4"] }
