[workspace]
members = [
    "chimp_chomp",
    "chimp_controller",
    "chimp_protocol",
    "graphql_endpoints",
    "graphql_event_broker",
    "opa_client",
    "pin_packing",
    "soakdb_io",
    "soakdb_sync",
    "targeting",
    "the_paginator",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.79" }
async-graphql = { version = "6.0.11", default-features = false, features = [
    "chrono",
    "graphiql",
    "tracing",
    "uuid",
    "url",
] }
aws-credential-types = { version = "0.56.0" }
aws-sdk-s3 = { version = "0.29.0" }
axum = { version = "0.6.20", features = ["headers", "macros", "ws"] }
chrono = { version = "0.4.34", default-features = false }
clap = { version = "4.4.17", features = ["derive", "env"] }
derive_more = { version = "0.99.17" }
dotenvy = { version = "0.15.7" }
itertools = { version = "0.11.0" }
reqwest = { version = "0.11.24" }
sea-orm = { version = "0.11.2", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "0.11.3" }
serde = { version = "1.0.196" }
thiserror = { version = "1.0.57" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0" }
uuid = { version = "1.7.0", features = ["v7"] }
