[package]
name = "chimp_chomp"
version = "0.1.0"
edition = "2021"

[dependencies]
chimp_protocol = { path = "../chimp_protocol" }
clap = { workspace = true }
dotenvy = { workspace = true }
futures-lite = { version = "1.13.0" }
image = { version = "0.24.6" }
itertools = { workspace = true }
lapin = { version = "2.2.1", default-features = false, features = [
    "native-tls",
] }
ndarray = { version = "0.15.6" }
nshare = { version = "0.9.0", default-features = false, features = [
    "image",
    "ndarray",
] }
ort = { version = "1.14.8", default-features = false, features = [
    "download-binaries",
    "tensorrt",
    "copy-dylibs",
] }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }
uuid = { workspace = true }
