[package]
name = "exporter"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.o'donnell@diamond.ac.uk>"]
description = "An XChemLab service, used to export legacy SoakDB sqlite files."
license = "Apache-2.0"
repository = "https://github.com/garryod/xchemlab_soakdb_interface"
homepage = "https://github.com/garryod/xchemlab_soakdb_interface"
readme = "../README.md"

[dependencies]
async-graphql = { version = "5.0.7", features = ["uuid"] }
async-graphql-axum = "5.0.7"
axum = { version = "0.6.15", features = ["ws", "headers"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2.4", features = ["derive"] }
