[package]
name = "pin_packing"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
opa_client = { path = "../opa_client", features = ["graphql"] }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
