[package]
name = "soakdb_sync"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.o'donnell@diamond.ac.uk>"]
description = "An XChemLab service, used to export legacy SoakDB sqlite files."
license = "Apache-2.0"
repository = "https://github.com/garryod/xchemlab_soakdb_interface"
homepage = "https://github.com/garryod/xchemlab_soakdb_interface"
readme = "../README.md"

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
itertools = { workspace = true }
opa_client = { path = "../opa_client", features = ["graphql"] }
soakdb_io = { path = "../soakdb_io" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
