[package]
name = "targeting"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_for_s3 = { path = "../clap_for_s3" }
dotenvy = { workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
opa_client = { path = "../opa_client", features = ["graphql"] }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
