[package]
name = "chimp_chomp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chimp_protocol = { path = "../chimp_protocol" }
clap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
futures = { version = "0.3.28" }
futures-timer = { version = "3.0.2" }
itertools = { workspace = true }
lapin = { version = "2.3.1" }
ndarray = { version = "0.15.6" }
opencv = { version = "0.84.5", default-features = false, features = [
    "imgproc",
    "imgcodecs",
] }
ort = { version = "1.16.2", default-features = false, features = [
    "download-binaries",
    "copy-dylibs",
] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { version = "0.5.1" }
