[package]
name = "chimp_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-tungstenite = { version = "0.22.0", features = ["tokio-runtime"] }
chimp_protocol = { path = "../chimp_protocol" }
clap = { workspace = true }
cynic = { version = "3.7.0", features = ["http-reqwest"] }
dotenvy = { workspace = true }
futures-util = { version = "0.3.30" }
graphql-ws-client = { version = "0.5.0", features = ["cynic"] }
lapin = { version = "2.3.3", default-features = false, features = ["rustls"] }
reqwest = { version = "0.11.24" }
tokio = { workspace = true, features = ["sync"] }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cynic-codegen = { version = "3.7.0" }
targeting = { path = "../targeting" }
