[package]
name = "graphql_endpoints"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = { version = "6.0.11" }
axum = { workspace = true }
futures-core = { version = "0.3.29" }
opa_client = { path = "../opa_client" }
tower-service = { version = "0.3.2" }

[dev-dependencies]
url = { workspace = true }
