[package]
name = "opa_client"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.o'donnell@diamond.ac.uk>"]
description = "An Open Policy Agent RESTful client, with utiltiies for async-graphql."
license = "Apache-2.0"
repository = "https://github.com/garryod/xchemlab_soakdb_interface"
homepage = "https://github.com/garryod/xchemlab_soakdb_interface"
readme = "../README.md"

[features]
graphql = ["async-graphql"]

[dependencies]
async-graphql = { workspace = true, optional = true }
derive_more = { workspace = true }
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
