[package]
name = "pin_packing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
graphql_endpoints = { path = "../graphql_endpoints" }
opa_client = { path = "../opa_client", features = ["graphql"] }
sea-orm = { workspace = true, features = ["sqlx-postgres"] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
the_paginator = { version = "0.1.0", path = "../the_paginator", features = [
    "async-graphql",
] }
