[package]
name = "soakdb_io"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.o'donnell@diamond.ac.uk>"]
description = "An XChemLab library, used to interface with the legacy SoakDB database."
license = "Apache-2.0"
repository = "https://github.com/garryod/xchemlab_soakdb_interface"
homepage = "https://github.com/garryod/xchemlab_soakdb_interface"
readme = "../README.md"

[dependencies]
chrono = { workspace = true }
chrono-tz = { version = "0.8.4" }
derive_more = { workspace = true }
lexical = { version = "6.1.1" }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { version = "0.3.30" }
